# llamea-experiment

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-package.yml
llamea/: __init__.py  _version.py
llamea/tests/: test_directories.py
