[tool.poetry]
name = "llamea"
version = "0.0.1"
description = "llamea experiments"
authors = ["George Laskaris <geo_lask777@yahoo.gr>"]
license = "MIT"
readme = "README.md"
packages = [{include = "llamea"}]
include = ["data/*", "README.md", "llamea/tests/test_data/*"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "1.24.4"
#ioh = "0.3.14"
scikit-learn = "1.3.0"
pandas = "2.0.3"
openai = "^1.25.2"
seaborn = "^0.13.2"
levenshtein = "^0.25.1"
tqdm = "^4.66.4"
zss = "^1.2.0"
jellyfish = "^1.0.3"
modcma = "^1.0.6"
configspace = "^0.7.1"
ollama = "^0.2.1"
black = "^23.11.0"
isort = "^5.12.0"
pytest = "^7.4.3"
jupyter = "^1.0.0"
pytest-cov = "^4.1.0"
codecov = "^2.1.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
